# esp-prom

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
.github/: actions.yml
.github/workflows/: actions.yml  trigger-release.yml
components/esp-prom-httpd/: CMakeLists.txt  default-metrics.c  default-metrics.h  esp-prom-httpd.c  esp-prom-httpd.h
docker/: docker-compose.yml
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
esp-idf-prom/: .gitmodules  CMakeLists.txt  main.cpp
esp-prom-httpd/: Kconfig.projbuild  default-metrics.c  default-metrics.h  esp-prom-httpd.c  esp-prom-httpd.h
examples/simple/: CMakeLists.txt  README.md
examples/simple/main/: main.c
